syntax = "proto3";
package POG_API;

enum AccountType {
  Managed = 0;
  Autonomous = 1;
}

message PrivateAccount {
  AccountType type = 1;
  bytes address = 2;
  bytes publicKey = 3;
  bytes privateKey = 4;
  uint32 votingPower = 5;
}

message PublicAccount {
  AccountType type = 1;
  bytes address = 2;
  uint32 votingPower = 3;
}

enum SigType { Ed25519 = 0; }
enum BlockVersion { V1 = 0; }

message Transaction {
  // Initialize a new Account
  message TxOpen { AccountType type = 1; };

  // Block send is a send transaction in the sender's account
  message TxSend {
    bytes reviever = 1;
    uint64 amount = 2;
    bytes data = 3;
  };

  // Block Claim collects a transaction from another account's block
  message TxClaim {
    bytes block = 1;
    int64 transactionIndex = 2;
  };

  // Block delegate assigns a new representative to an account
  message TxDelegate { bytes representative = 1; };

  oneof transaction {
    TxOpen txOpen = 5;
    TxSend txSend = 6;
    TxClaim txCollect = 7;
    TxDelegate txDelegate = 8;
  };
}

message Block {
  // SHA-3-256 hash of the block data
  bytes hash = 2;

  // 64 bytes (for Ed25519, might be expanded later)
  bytes signature = 4;

  // 32 bytes (for Ed25519)
  // this needs to be provided since account addresses are hashed public keys
  bytes publicKey = 5;

  // data is the field that will be signed and hashed to generate the values
  // above
  BlockData data = 6;
  message BlockData {
    BlockVersion version = 1;
    SigType signatureType = 2;

    // 24 bytes
    bytes address = 3;

    // the new account ballance after applying all transactions
    uint64 balance = 4;

    // the block height (block index)
    uint64 height = 5;

    // previous block, empty if first block
    optional bytes previous = 6;

    repeated Transaction transactions = 7;
  }
}

// Calls for a vote on conflicting blocks (e.g when double spending)
message CallVoteRequest {}

// Vote casts a vote on which of multiple conflicting block will be chosen
message VoteResponse {}